2005-07-29  Roland McGrath  <roland@redhat.com>

	* Version 0.2 distribution.

	* systemtap.spec.in: Include %{_datadir}/systemtap/tapset directory.
	(%check): Add section, run make check.
	* Makefile.am (EXTRA_DIST): Add runtest.sh.
	* Makefile.in: Regenerated.

	* systemtap.spec.in: Include man pages.
	* Makefile.am (man_MANS): Renamed to dist_man_MANS.

	* configure.ac: Add AM_CONDITIONAL definition of HAVE_LIBDW.
	* Makefile.am [HAVE_LIBDW] (stap_SOURCES_libdw): New variable.
	(stap_SOURCES): Use it, moving loc2c.c there.
	* configure, config.in: Regenerated.

	* tapsets.cxx: <libdw.h> -> <elfutils/libdw.h>
	* loc2c.c, loc2c.h: Likewise.

	* main.cxx (main): Check return value of system.

	* systemtap.spec.in (LDFLAGS): Punt using $ORIGIN here, just hard-code
	%{_libdir}.
	(elfutils_version): Bump to 0.111.
	[bundled_elfutils]: Don't massage libdwfl.h header any more.

	* configure.ac: Don't check for libelf.h, not actually #include'd.
	Update -ldw check for merged libdwfl+libdw.
	(stap_LIBS): New substituted variable.  Set only this, not LIBS,
	with -ldw check.
	* Makefile.am (stap_LDADD): New variable, use @stap_LIBS@.

	* Makefile.am (AM_CPPFLAGS): Use ${pkgdatadir}.
	(AM_CFLAGS): Use -W instead of -Wextra, for gcc 3 compatibility.
	(stpd_LDFLAGS): Variable removed.
	(AM_MAKEFLAGS): Variable removed.

2005-07-28  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (find_var): Correct array dereferencing thinko.

2005-07-28  Graydon Hoare  <graydon@redhat.com>

	* elaborate.cxx (derived_probe::derived_probe): Accept NULL probe.
	* staptree.cxx (provide, require): Move from here...
	* staptree.h: to here, and virtualize deep-copy methods.
	* translate.cxx
	(c_unparser::emit_common_header): Include loc2c-runtime.h
	* tapsets.cxx
	(dwflpp::iterate_over_modules): Use new, faster getmodules loop.
	(dwflpp::literal_stmt_for_local): New method, call loc2c.
	(var_expanding_copy_visitor): New struct which expands $-vars.