@@ -3,12 +3,6 @@
 /* Configuration/build date */
 #undef DATE
 
-/* Define to 1 if you have the <elfutils/libdwfl.h> header file. */
-#undef HAVE_ELFUTILS_LIBDWFL_H
-
-/* Define to 1 if you have the <elfutils/libdw.h> header file. */
-#undef HAVE_ELFUTILS_LIBDW_H
-
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
