@@ -1,3 +1,9 @@
+2005-07-29  Frank Ch. Eigler  <fche@redhat.com>
+
+	* configure.ac: Fail configure stage if elfutils 0.111+ is not found.
+	* Makefile.am, elaborate.cxx, tapsets.cxx: Unconditionalize.
+	* configure, Makefile.in, config.in: Regenerated.
+
 2005-07-29  Roland McGrath  <roland@redhat.com>
 
 	* Version 0.2 distribution.
